# sanjivani-ai

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  GUIDE.md  LICENSE  PRODUCTION.md  README.md  REPORT.md  SETUP.md  SYSTEM_ARCHITECTURE.md  docker-compose.prod.yml  docker-compose.yml  guide.docx  production.docx  pyproject.toml  pytest.ini  report.docx  report_2.md  requirements.txt
.github/workflows/: ci.yml
data/satellite/: metadata.json
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.train  nginx.conf
models/nlp/: training_history.json
models/vision/: segmentation_history.json
scripts/: generate_sample_data.py  generate_satellite_data.py  init_db.py
src/: __init__.py  config.py
src/api/: __init__.py  exceptions.py  main.py
src/api/middleware/: __init__.py  auth.py  request_id.py
src/api/routes/: __init__.py  forecasting.py  health.py  metrics.py  nlp.py  vision.py
src/api/schemas/: __init__.py  image.py  prediction.py  tweet.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  charts.py  map.py
src/data/: __init__.py  database.py  loaders.py  models.py  satellite_downloader.py  split_dataset.py  twitter_streamer.py
src/forecasting/: __init__.py  ensemble.py  feature_engineering.py  inference.py  lstm_model.py  train.py  xgboost_model.py
src/nlp/: __init__.py  dataset.py  evaluate.py  inference.py  location_extractor.py  model.py  pipeline.py  preprocessing.py  train.py
src/utils/: __init__.py  helpers.py  logger.py
src/vision/: __init__.py  change_detection.py  dataset.py  detection.py  inference.py  preprocessing.py  segmentation.py  train_detection.py  train_segmentation.py
tests/: __init__.py  test_api.py  test_helpers.py  test_location.py  test_nlp.py
