# Sanjivani AI - Project Configuration
# Python project metadata and tool configurations

[project]
name = "sanjivani-ai"
version = "1.0.0"
description = "Multimodal Crisis Intelligence System for Flood Disaster Response"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aditya", email = "aditya@example.com"}
]
requires-python = ">=3.9"
keywords = ["flood", "disaster", "response", "nlp", "machine-learning", "bihar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/username/sanjivani-ai"
Documentation = "https://github.com/username/sanjivani-ai#readme"
Repository = "https://github.com/username/sanjivani-ai"

# ========== Ruff (Linting & Formatting) ==========
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from in except
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========== MyPy (Type Checking) ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ========== Pytest ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ========== Coverage ==========
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 70
